dist/manifests/kubernetes-cluster-manifests/influxdb-operator/000influxdb-pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
